--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/sqlogbkg"
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
@@ -11,21 +10,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+      -
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="175dp"
+                android:layout_gravity="center"
+                android:src="@drawable/agro"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
                 android:orientation="vertical"
                 android:padding="20dp">
 
                 <EditText
                     android:id="@+id/login_email"
                     android:layout_width="350dp"
+                    android:layout_gravity="center"
                     android:layout_height="60dp"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/lavender_border"
@@ -38,6 +44,7 @@
                     android:id="@+id/login_password"
                     android:layout_width="350dp"
                     android:layout_height="60dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/lavender_border"
                     android:drawableLeft="@drawable/baseline_lock_24"
@@ -49,6 +56,7 @@
                 <Button
                     android:id="@+id/login_button"
                     android:layout_width="350dp"
+                    android:layout_gravity="center"
                     android:layout_height="70dp"
                     android:layout_marginTop="30dp"
                     android:text="Login"
