--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,25 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/sqlsignbkg"
     tools:context=".SignupActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="175dp"
+            android:layout_gravity="center"
+            android:src="@drawable/agro"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="380dp"
             android:padding="20dp">
 
 
             <EditText
                 android:layout_width="350dp"
                 android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:id="@+id/signup_email"
                 android:background="@drawable/lavender_border"
                 android:layout_marginTop="30dp"
@@ -36,6 +40,7 @@
             <EditText
                 android:layout_width="350dp"
                 android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:id="@+id/signup_password"
                 android:background="@drawable/lavender_border"
                 android:layout_marginTop="20dp"
@@ -48,6 +53,7 @@
             <EditText
                 android:layout_width="350dp"
                 android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:id="@+id/signup_confirm"
                 android:background="@drawable/lavender_border"
                 android:layout_marginTop="20dp"
@@ -60,6 +66,7 @@
             <Button
                 android:layout_width="350dp"
                 android:layout_height="70dp"
+                android:layout_gravity="center"
                 android:text="Sign Up"
                 android:id="@+id/signup_button"
                 android:textSize="18sp"
