--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:background="@drawable/gradient_background"
     android:orientation="vertical">
 
 
@@ -11,7 +10,7 @@
         android:id="@+id/profile_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/profile_image"
+        android:src="@drawable/profilepic"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"/>
 
@@ -26,13 +25,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="xyzexampleemail@gmail.com"/>
+        android:text="john dave"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:textColor="@color/black"
-        android:text="Coding For YOu"/>
+        android:text="JD"/>
 </LinearLayout>
