--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
                 android:layout_width="250dp"
                 android:layout_height="175dp"
                 android:layout_gravity="center"
-                android:src="@drawable/agro"/>
+                android:src="@drawable/agrospreadlogo3"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
