--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,9 +14,19 @@
         android:orientation="vertical">
         <ImageView
             android:layout_width="250dp"
-            android:layout_height="175dp"
+            android:layout_height="85dp"
             android:layout_gravity="center"
-            android:src="@drawable/agro"/>
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/agrospreadlogo3"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Create An Account"
+            android:textColor="@color/blue"
+            android:textStyle="bold"
+            android:textSize="24dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,9 +39,31 @@
                 android:layout_width="350dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
+                android:id="@+id/signup_username"
+                android:background="@drawable/lavender_border"
+                android:layout_marginTop="5dp"
+                android:padding="8dp"
+                android:hint="Username"
+                android:drawableLeft="@drawable/baseline_email_24"
+                android:drawablePadding="8dp"/>
+            <EditText
+                android:layout_width="350dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:id="@+id/signup_fullname"
+                android:background="@drawable/lavender_border"
+                android:layout_marginTop="5dp"
+                android:padding="8dp"
+                android:hint="Enter FullName"
+                android:drawableLeft="@drawable/baseline_email_24"
+                android:drawablePadding="8dp"/>
+            <EditText
+                android:layout_width="350dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:id="@+id/signup_email"
                 android:background="@drawable/lavender_border"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="5dp"
                 android:padding="8dp"
                 android:hint="Email"
                 android:drawableLeft="@drawable/baseline_email_24"
@@ -43,7 +75,7 @@
                 android:layout_gravity="center"
                 android:id="@+id/signup_password"
                 android:background="@drawable/lavender_border"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:padding="8dp"
                 android:hint="Password"
                 android:inputType="textPassword"
@@ -56,10 +88,32 @@
                 android:layout_gravity="center"
                 android:id="@+id/signup_confirm"
                 android:background="@drawable/lavender_border"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:padding="8dp"
                 android:hint="Confirm Password"
                 android:inputType="textPassword"
+                android:drawableLeft="@drawable/baseline_password_24"
+                android:drawablePadding="8dp"/>
+            <EditText
+                android:layout_width="350dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:id="@+id/signup_address"
+                android:background="@drawable/lavender_border"
+                android:layout_marginTop="5dp"
+                android:padding="8dp"
+                android:hint="Address"
+                android:drawableLeft="@drawable/baseline_password_24"
+                android:drawablePadding="8dp"/>
+            <EditText
+                android:layout_width="350dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:id="@+id/signup_phone"
+                android:background="@drawable/lavender_border"
+                android:layout_marginTop="5dp"
+                android:padding="8dp"
+                android:hint="Phone"
                 android:drawableLeft="@drawable/baseline_password_24"
                 android:drawablePadding="8dp"/>
 
@@ -70,7 +124,7 @@
                 android:text="Sign Up"
                 android:id="@+id/signup_button"
                 android:textSize="18sp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 app:cornerRadius = "30dp"/>
 
 
