--- a/app/src/main/res/layout/fragment_aboutus.xml
+++ b/app/src/main/res/layout/fragment_aboutus.xml
@@ -2,18 +2,36 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_marginBottom="80dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/arrowback"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/arrow"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="About US"
+                android:textSize="25dp"
+                android:textColor="@color/blue"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
         <ImageView
             android:id="@+id/about_us_image"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/baseline_info_24"
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            android:src="@drawable/agrospreadlogo3"
             android:scaleType="centerCrop"
             android:layout_gravity="center" />
 
@@ -31,7 +49,7 @@
             android:id="@+id/about_us_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="We are a team dedicated to providing innovative solutions to our users. Our goal is to ensure customer satisfaction and continuous improvement."
+            android:text="@string/aboutus"
             android:textSize="16sp"
             android:layout_marginTop="8dp"
             android:padding="8dp" />
