--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -1,25 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_height="match_parent"
+    android:padding="8dp"
+    android:fillViewport="true">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Featured Products"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:textColor="@color/blue"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        android:orientation="vertical"
+        android:padding="8dp">
 
-</LinearLayout>
+        <!-- Search bar -->
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="Search for books..."
+            android:layout_marginTop="10dp"
+            android:iconifiedByDefault="false" />
+
+        <!-- Auto Image Slider (ViewPager2) -->
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginBottom="10dp" />
+
+        <!-- Title for Best Deals -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Best Deals"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@color/blue"
+            android:textStyle="bold"
+            android:textSize="40sp"
+            android:textColor="@color/white"
+            android:layout_marginBottom="5dp" />
+
+        <!-- Countdown Timer -->
+        <TextView
+            android:id="@+id/countdownTimer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ends In 24:00:00"
+            android:layout_gravity="center"
+            android:gravity="right"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:layout_marginBottom="25dp" />
+
+        <!-- RecyclerView for Best Deals -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical" />
+
+    </LinearLayout>
+</ScrollView>
